fix: scrollbar gutter

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@ body {
   line-height: 1.625;
   font-weight: 300;
   overflow-x: hidden;
+  scrollbar-gutter: stable;
 }
 
 :root{
